# dnlcalc

./: .gitignore  CMakeLists.txt  platform_config.cmake
src/: decl.h  global.cpp  global.h  main.cpp  pch.h
src/expr/: executioncontext.h  parser.cpp  parser.h  rulemanager.cpp  rulemanager.h  rules.cpp  rules.h  value.cpp  value.h
src/expr/exec/: executioncontext.cpp  executioncontext.h  executionerror.cpp  executionerror.h  value.cpp  value.h  valuetype.h
src/expr/function/: functionmanager.cpp  functionmanager.h
src/expr/function/func/: function.h  intrinsicfunction.h
src/expr/function/match/: number.cpp  number.h  valuematch.h
src/expr/parser/: parser.cpp  parser.h  rulemanager.cpp  rulemanager.h  sourceref.cpp  sourceref.h
src/expr/parser/rule/: compositeexpressionrule.h  expressionrule.cpp  expressionrule.h  recursionrule.h  regexrule.h  repeatrule.h  rule.h  unitrule.cpp  unitrule.h
src/expr/rule/: compositeexpressionrule.h  errorrule.h  expressionrule.cpp  expressionrule.h  numberrule.h  regexrule.h  rule.h  stringrule.h
src/expr/unit/: quantity.cpp  quantity.h  unit.cpp  unit.h  unitmanager.cpp  unitmanager.h
src/gui/: calcwindow.cpp  calcwindow.h  calcwindow.ui
src/intrinsic/: intrinsicfunctions.cpp  intrinsicfunctions.h  intrinsicrules.cpp  intrinsicrules.h  intrinsicunits.cpp  intrinsicunits.h
src/parser/: parser.cpp  rulemanager.h
src/parser/rule/: expressionrule.cpp  expressionrule.h  numberrule.h  rule.h  stringrule.h
src/util/: identifier.cpp  identifier.h  iterator.h  scopeexit.h  stringutils.h  valueguard.h
src/value/: executioncontext.h  functionmanager.cpp  functionmanager.h  value.h
